# pycolmap-wheels

./: .gitignore  CMakeLists.txt  JXRGlueJxr.c  LICENSE  README.md  build-macos-new.sh  build-macos-nobrew.sh  build-wheels-linux.sh  build-wheels-macos.sh  gzguts.h  gzlib.c  main.cc  setup.py  setup_centos.py  setup_mac_nobrew.py
.github/workflows/: build-new.yml
cmake/: CMakeConfig.cmake.in
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/estimators/: CMakeLists.txt  essential_matrix.h  homography_matrix.cc
src/optim/: CMakeLists.txt
src/util/: CMakeLists.txt  version.h  version.h.in
